style: reduce `.timeline-item-title` font size to prevent layout breaking

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -173,6 +173,10 @@
   }
 }
 
+body[lang=en-TW] .timeline-item-title {
+  @apply text-xl;
+}
+
 #modal {
   @apply fixed left-0 top-0 w-full h-full z-50 flex items-center justify-center p-4;
   background-color: rgba(0, 0, 0, 0.5);
